# fips

./: .git-blame-ignore-revs  .gitignore  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  README.md  build.rs  fips.key  fips.pub  fips.yaml
.github/workflows/: aur-publish.yml  ci-compat.yml  ci.yml  package-macos.yml
.planning/: ANDROID-FIPS-DROPBOX-POC.md  BACKLOG.md  DECISIONS.md  FIPS-DROP-NEXT-PHASES.md  FIPS-DROP-PHYSICAL-TEST.md  LOG.md  NEXT.md  NOW.md  POC-SUITE.md  RISKS.md  STATUS.md  changes.md  changes2.md  codex.session  peer-assisted-core-34e00b9-to-3eaf9ac.diff  pr_punch.md  pr_review.md  pushstr-fips-dropbox-plan.md
.planning/archive/2026-05-07-cleanup/: PR-DESCRIPTION.md  PR-READINESS-TODO.md  chk.md  wip.md
crates/fips-mobile/: Cargo.toml  README.md
crates/fips-mobile/src/: lib.rs  quic.rs
docs/: README.md  branching.md
docs/design/: README.md  fips-architecture.md  fips-bloom-filters.md  fips-configuration.md  fips-drop-blossom-alignment.md  fips-embedded-client.md  fips-gateway.md  fips-intro.md  fips-mesh-layer.md  fips-mesh-operation.md  fips-mmp.md  fips-mobile-library.md  fips-mtu.md  fips-nostr-discovery.md  fips-session-layer.md  fips-spanning-tree.md  fips-transport-layer.md  fips-wire-formats.md  port-advertisement-and-nat-traversal.md
docs/how-to/: enable-nostr-discovery.md  run-as-unprivileged-user.md  troubleshoot-gateway.md
docs/ops/: README.md  fips-drop-receiver.md
docs/pocs/: README.md  fips-drop-android-pi.md
docs/proposals/: issue-37-status-and-closure-plan.md  nostr-udp-hole-punch-protocol.md
docs/reference/: cli-fips.md  cli-fipsctl.md  cli-fipstop.md  configuration.md  control-socket.md  transports.md
docs/releases/: release-notes-v0.2.1.md  release-notes-v0.3.0.md  release-notes-v0.4.0.md
docs/specs/: README.md  fips-drop-v0.md
docs/tutorials/: host-a-service.md  ipv6-adapter-walkthrough.md  reach-mesh-services.md
examples/k8s-sidecar/: README.md
examples/nostr-bootstrap/: Cargo.toml  README.md
examples/nostr-bootstrap/src/: common.rs  constants.rs  fips_handoff.rs  lib.rs  protocol.rs  tests.rs  traversal.rs  types.rs
examples/nostr-bootstrap/src/client_runtime/: mod.rs  rendezvous.rs  stun.rs  subscriptions.rs
examples/nostr-bootstrap/src/server_runtime/: mod.rs  rendezvous.rs  shell.rs  stun.rs  subscriptions.rs
examples/sidecar-nostr-relay/: README.md  docker-compose.yml  entrypoint.sh
examples/wireguard-sidecar-macos/: fips.yaml
packaging/: Makefile  README.md
packaging/aur/: patch-pkgbuild.sh
packaging/common/: fips-dns-setup  fips-dns-teardown  fips.yaml
packaging/debian/: build-deb.sh  postinst  postrm
packaging/macos/: build-pkg.sh  com.fips.daemon.plist  install.sh  uninstall.sh
packaging/systemd/: fips-dns.service  fips-drop.env.example  fips-drop.service  fips-drop.tmpfiles  install.sh  uninstall.sh
src/: app.rs  bootstrap.rs  discovery.rs  drop_agent.rs  dropbox.rs  lib.rs  mobile.rs  quic.rs  version.rs
src/bloom/: codec.rs  filter.rs  mod.rs  state.rs  tests.rs
src/bootstrap/nostr/: mod.rs  runtime.rs  signal.rs  stun.rs  tests.rs  types.rs
src/cache/: coord_cache.rs
src/config/: gateway.rs  mod.rs  node.rs  peer.rs  transport.rs
src/control/: commands.rs  firewall_state.rs  mod.rs  queries.rs  read_handle.rs  snapshot.rs
src/control/snapshots/: show_routing.json  show_tree.json
src/discovery/lan/: mod.rs  tests.rs
src/discovery/nostr/: assist.rs  failure_state.rs  mod.rs  runtime.rs  signal.rs  stun.rs  tests.rs  traversal.rs  types.rs
src/gateway/: control.rs  pool.rs
src/identity/: address.rs  local.rs  node_addr.rs  peer.rs  tests.rs
src/mmp/: algorithms.rs  metrics.rs  mod.rs  receiver.rs  report.rs  sender.rs
src/node/: acl.rs  bloom.rs  context.rs  discovery_rate_limit.rs  embedded.rs  lifecycle.rs  mod.rs  rate_limit.rs  reject.rs  reloadable.rs  retry.rs  routing_error_rate_limit.rs  service.rs  session.rs  session_wire.rs  stats.rs  stats_history.rs  tree.rs  wire.rs
src/node/handlers/: discovery.rs  dispatch.rs  encrypted.rs  forwarding.rs  handshake.rs  mmp.rs  rekey.rs  rx_loop.rs  session.rs  timeout.rs
src/node/tests/: acl.rs  app.rs  ble.rs  bloom.rs  bloom_poison.rs  bootstrap.rs  disconnect.rs  discovery.rs  ethernet.rs  forwarding.rs  handshake.rs  heartbeat.rs  mod.rs  routing.rs  session.rs  spanning_tree.rs  tcp.rs  unit.rs
src/noise/: handshake.rs  mod.rs  session.rs  tests.rs
src/peer/: active.rs  connection.rs  mod.rs
src/protocol/: discovery.rs  filter.rs  link.rs  mod.rs  negotiation.rs  session.rs  tree.rs
src/transport/: loopback.rs  mod.rs
src/transport/ble/: addr.rs  discovery.rs  io.rs  mod.rs  pool.rs  stats.rs
src/transport/ethernet/: discovery.rs  mod.rs  socket.rs  socket_linux.rs  socket_macos.rs
src/transport/tcp/: mod.rs  stream.rs
src/transport/tor/: control.rs  mock_control.rs  mock_socks5.rs  mod.rs
src/transport/udp/: mod.rs  peer_drain.rs  socket.rs  stun.rs
src/tree/: coordinate.rs  declaration.rs  state.rs  tests.rs
src/upper/: config.rs  dns.rs  hosts.rs  icmp.rs  icmp_rate_limit.rs  ipv6_shim.rs  tcp_mss.rs  tun.rs
testing/: README.md  ci-local.sh
testing/boringtun/: Dockerfile  README.md  docker-compose.yml  entrypoint.sh
testing/boringtun/scripts/: bench.sh  generate-keys.sh
testing/chaos/scenarios/: bloom-storm.README.md  bloom-storm.yaml
testing/chaos/sim/: __main__.py  assertions.py  control.py  link_swap.py  runner.py  scenario.py
testing/deb-install/: test.sh
testing/dns-resolver/: test.sh
testing/docker/: entrypoint.sh
testing/firewall/: test.sh
testing/lib/: log_analysis.py  wait-converge-test.sh  wait-converge.sh
testing/mesh-lab/: README.md  compose-trace-tree.yml  run-loop.sh
testing/nat/: README.md  docker-compose.yml
testing/nat/node/: entrypoint.sh
testing/nat/relay/: strfry.conf
testing/nat/router/: Dockerfile  entrypoint.sh
testing/nat/scripts/: generate-configs.sh  nat-test.sh  nostr-relay-test.sh  (+2 more)
testing/realworld/: README.md  fips-drop-functional.sh
testing/scripts/: build.sh
testing/static/: README.md  docker-compose.yml
(+17 files in other folders)
