[package]
name = "fips-nostr-rendezvous"
version = "0.1.0"
edition = "2021"
description = "Experimental Nostr-signaled UDP traversal helpers and NAT-lab support"

[dependencies]
anyhow = "1"
nostr = { version = "0.39", features = ["std", "nip59"] }
nostr-sdk = "0.39"
rand = "0.8"
serde_json = "1"
serde = { version = "1", features = ["derive"] }
sha2 = "0.10"
thiserror = "1"
tokio = { version = "1", features = ["macros", "rt-multi-thread", "net", "sync", "time"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

[dev-dependencies]
